Correção de warnings